Refactor HealthToolTest to simplify content retrieval in assertions